--- a/helm/Chart.yaml
+++ b/helm/Chart.yaml
@@ -1,5 +1,5 @@
 apiVersion: v1
-appVersion: "v1.1.1"
-description: A Helm chart for Kubernetes
-name: yoda
-version: 1.1
+appVersion: "v0.1.0"
+description: cloud-native local storage management system
+name: open-local
+version: 0.1
