--- a/helm/templates/rbac.yaml
+++ b/helm/templates/rbac.yaml
@@ -16,6 +16,7 @@ rules:
       - list
       - watch
       - update
+      - delete
       - patch
   - apiGroups:
       - ""
@@ -28,76 +29,30 @@ rules:
   - apiGroups:
       - ""
     resources:
-      - endpoints
-    verbs:
-      - create
-      - get
-      - list
-      - watch
-      - update
-  - apiGroups:
-      - ""
-    resourceNames:
-      - kube-scheduler
-    resources:
-      - endpoints
-    verbs:
-      - delete
-      - get
-      - patch
-      - update
-  - apiGroups:
-      - ""
-    resources:
       - nodes
-    verbs:
-      - get
-      - list
-      - watch
-  - apiGroups:
-      - ""
-    resources:
       - pods
-    verbs:
-      - delete
-      - get
-      - list
-      - watch
-  - apiGroups:
-      - ""
-    resources:
-      - bindings
       - pods/binding
-    verbs:
-      - create
-  - apiGroups:
-      - ""
-    resources:
       - pods/status
-    verbs:
-      - patch
-      - update
-  - apiGroups:
-      - ""
-    resources:
+      - bindings
       - replicationcontrollers
       - services
+      - endpoints
+      - persistentvolumeclaims
+      - persistentvolumes
+      - configmaps
     verbs:
+      - create
       - get
       - list
       - watch
+      - update
+      - delete
+      - patch
   - apiGroups:
       - apps
       - extensions
     resources:
       - replicasets
-    verbs:
-      - get
-      - list
-      - watch
-  - apiGroups:
-      - apps
-    resources:
       - statefulsets
     verbs:
       - get
@@ -107,15 +62,6 @@ rules:
       - policy
     resources:
       - poddisruptionbudgets
-    verbs:
-      - get
-      - list
-      - watch
-  - apiGroups:
-      - ""
-    resources:
-      - persistentvolumeclaims
-      - persistentvolumes
     verbs:
       - get
       - list
@@ -133,16 +79,6 @@ rules:
     verbs:
       - create
   - apiGroups:
-      - ""
-    resources:
-      - persistentvolumes
-    verbs:
-      - get
-      - list
-      - patch
-      - update
-      - watch
-  - apiGroups:
       - storage.k8s.io
     resources:
       - storageclasses
@@ -151,16 +87,19 @@ rules:
       - list
       - watch
   - apiGroups:
-      - ""
+      - snapshot.storage.k8s.io
     resources:
-      - persistentvolumeclaims
-      - configmaps
+      - volumesnapshotclasses
+      - volumesnapshotcontents
+      - volumesnapshots
     verbs:
+      - create
       - get
       - list
-      - patch
-      - update
       - watch
+      - update
+      - delete
+      - patch
 ---
 apiVersion: v1
 kind: ServiceAccount
