--- a/helm/templates/rbac.yaml
+++ b/helm/templates/rbac.yaml
@@ -91,8 +91,10 @@ rules:
       - snapshot.storage.k8s.io
     resources:
       - volumesnapshotclasses
-      - volumesnapshotcontents
       - volumesnapshots
+      - volumesnapshots/status
+      - volumesnapshotcontents
+      - volumesnapshotcontents/status
     verbs:
       - create
       - get
