--- a/helm/templates/snapshot-class.yaml
+++ b/helm/templates/snapshot-class.yaml
@@ -5,7 +5,7 @@ metadata:
 driver: {{ .Values.driver }}
 deletionPolicy: Delete
 parameters:
-  yoda.io/readonly: "true"
+  storage.oecp.io/readonly: "true"
   storage.oecp.io/snapshot-initial-size: 4Gi
   storage.oecp.io/snapshot-expansion-size: 1Gi
   storage.oecp.io/snapshot-expansion-threshold: 50%
