optimize log level

--- a/example/lvm/sts-lvm-snap.yaml
+++ b/example/lvm/sts-lvm-snap.yaml
@@ -49,6 +49,7 @@ spec:
       containers:
       - name: nginx
         image: nginx
+        imagePullPolicy: IfNotPresent
         volumeMounts:
         - mountPath: "/data"
           name: html
