--- a/example/lvm/sts-lvm.yaml
+++ b/example/lvm/sts-lvm.yaml
@@ -45,6 +45,7 @@ spec:
       containers:
       - name: nginx
         image: nginx
+        imagePullPolicy: IfNotPresent
         volumeMounts:
         - mountPath: "/data"
           name: html
