User open-local support patching resource persistentvolumeclaims/status

--- a/helm/templates/rbac.yaml
+++ b/helm/templates/rbac.yaml
@@ -38,7 +38,9 @@ rules:
       - services
       - endpoints
       - persistentvolumeclaims
+      - persistentvolumeclaims/status
       - persistentvolumes
+      - persistentvolumes/status
       - configmaps
     verbs:
       - create
