--- a/helm/values.yaml
+++ b/helm/values.yaml
@@ -1,16 +1,10 @@
 name: open-local
 namespace: kube-system
 driver: csi.storage.oecp.io
-images:                       # 镜像
-  agent:
+images:
+  local:
     image: thebeatles1994/open-local
-    tag: v0.1.0
-  extender:
-    image: thebeatles1994/open-local
-    tag: v0.1.0
-  csi:
-    image: thebeatles1994/open-local
-    tag: v0.1.0
+    tag: v0.1.1
   registrar:
     image: thebeatles1994/csi-node-driver-registrar
     tag: v1.3
