--- a/example/device/sts-device.yaml
+++ b/example/device/sts-device.yaml
@@ -1,27 +1,27 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: nginx-lvm
+  name: nginx-device
   labels:
-    app: nginx-lvm
+    app: nginx-device
 spec:
   ports:
   - port: 80
     name: web
   clusterIP: None
   selector:
-    app: nginx-lvm
+    app: nginx-device
 ---
 apiVersion: apps/v1
 kind: StatefulSet
 metadata:
-  name: nginx-lvm
+  name: nginx-device
 spec:
   selector:
     matchLabels:
-      app: nginx-lvm
+      app: nginx-device
   podManagementPolicy: Parallel
-  serviceName: "nginx-lvm"
+  serviceName: "nginx-device"
   replicas: 1
   volumeClaimTemplates:
   - metadata:
@@ -29,14 +29,14 @@ spec:
     spec:
       accessModes:
         - ReadWriteOnce
-      storageClassName: open-local-lvm
+      storageClassName: open-local-device-hdd
       resources:
         requests:
           storage: 5Gi
   template:
     metadata:
       labels:
-        app: nginx-lvm
+        app: nginx-device
     spec:
       tolerations:
         - key: node-role.kubernetes.io/master
