--- a/helm/templates/snapshot-class.yaml
+++ b/helm/templates/snapshot-class.yaml
@@ -1,7 +1,7 @@
 apiVersion: snapshot.storage.k8s.io/v1beta1
 kind: VolumeSnapshotClass
 metadata:
-  name: {{ .Values.storageclass.name }}
+  name: {{ .Values.storageclass.lvm.name }}
 driver: {{ .Values.driver }}
 deletionPolicy: Delete
 parameters:
