--- a/helm/values.yaml
+++ b/helm/values.yaml
@@ -4,7 +4,7 @@ driver: csi.storage.oecp.io
 images:
   local:
     image: thebeatles1994/open-local
-    tag: v0.1.1
+    tag: v0.1.2
   registrar:
     image: thebeatles1994/csi-node-driver-registrar
     tag: v1.3
@@ -38,4 +38,9 @@ extender:
   # 端口号
   port: 23000
 storageclass:
-  name: open-local-default
+  lvm:
+    name: open-local-lvm
+  device_ssd:
+    name: open-local-device-ssd
+  device_hdd:
+    name: open-local-device-hdd
