--- a/helm/templates/init-job.yaml
+++ b/helm/templates/init-job.yaml
@@ -4,14 +4,16 @@ metadata:
   name: {{ .Values.name }}-init-job
   namespace: {{ .Values.namespace }}
   labels:
-    app: {{ .Values.name }}-init-job
+    app: {{ .Values.name }}
+    component: {{ .Values.name }}-init-job
 spec:
   completions: 3
   parallelism: 3
   template:
     metadata:
       labels:
-        app: {{ .Values.name }}-init-job
+        app: {{ .Values.name }}
+        component: {{ .Values.name }}-init-job
     spec:
       hostNetwork: true
       tolerations:
