--- a/helm/values.yaml
+++ b/helm/values.yaml
@@ -4,7 +4,7 @@ driver: local.csi.alibaba.com
 images:
   local:
     image: thebeatles1994/open-local
-    tag: v0.2.0
+    tag: v0.2.0-dev
   registrar:
     image: thebeatles1994/csi-node-driver-registrar
     tag: v1.3
