--- a/helm/values.yaml
+++ b/helm/values.yaml
@@ -6,19 +6,19 @@ images:
     image: thebeatles1994/open-local
     tag: v0.2.0-dev
   registrar:
-    image: thebeatles1994/csi-node-driver-registrar
-    tag: v1.3
+    image: k8s.gcr.io/sig-storage/csi-node-driver-registrar
+    tag: v2.3.0
   provisioner:
-    image: thebeatles1994/csi-provisioner
-    tag: v1.6.1
+    image: k8s.gcr.io/sig-storage/csi-provisioner
+    tag: v2.2.2
   resizer:
-    image: thebeatles1994/csi-resizer
-    tag: v1.2.0
+    image: k8s.gcr.io/sig-storage/csi-resizer
+    tag: v1.3.0
   snapshotter:
-    image: thebeatles1994/csi-snapshotter
+    image: k8s.gcr.io/sig-storage/csi-snapshotter
     tag: v3.0.3
   snapshot_controller:
-    image: thebeatles1994/snapshot-controller
+    image: k8s.gcr.io/sig-storage/snapshot-controller
     tag: v3.0.3
 agent:
   name: open-local-agent
