--- a/config/csi.aliyun.com_nodelocalstorageinitconfigs.yaml
+++ b/config/csi.aliyun.com_nodelocalstorageinitconfigs.yaml
@@ -6,9 +6,9 @@ metadata:
   annotations:
     controller-gen.kubebuilder.io/version: v0.5.0
   creationTimestamp: null
-  name: nodelocalstorageinitconfigs.csi.alibaba.com
+  name: nodelocalstorageinitconfigs.csi.aliyun.com
 spec:
-  group: csi.alibaba.com
+  group: csi.aliyun.com
   names:
     kind: NodeLocalStorageInitConfig
     listKind: NodeLocalStorageInitConfigList
