--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -34,6 +34,6 @@ jobs:
         run: curl -sSfL https://raw.githubusercontent.com/golangci/golangci-lint/master/install.sh | sh -s -- -b $(go env GOPATH)/bin v1.39.0
 
       - name: Run Linter
-        run: golangci-lint run -v
+        run: golangci-lint run -v --timeout=10m
         working-directory: src/github.com/alibaba/open-local
 
