--- a/helm/Chart.yaml
+++ b/helm/Chart.yaml
@@ -1,5 +1,4 @@
 apiVersion: v1
-appVersion: "v0.1.1"
 description: cloud-native local storage management system
 name: open-local
-version: 0.1
+version: v0.2.2
