--- a/helm/values.yaml
+++ b/helm/values.yaml
@@ -4,7 +4,7 @@ driver: local.csi.aliyun.com
 images:
   local:
     image: thebeatles1994/open-local
-    tag: v0.2.2
+    tag: v0.2.3-dev
   registrar:
     image: k8s.gcr.io/sig-storage/csi-node-driver-registrar
     tag: v2.3.0
@@ -30,7 +30,7 @@ agent:
   # 要初始化的VG名称
   vgname: local-pool
   # 要初始化的块设备
-  device: /dev/vdb
+  device: /dev/sdb
 extender:
   name: open-local-scheduler-extender
   # 调度算法: binpack 或 spread
