--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,14 +1,12 @@
-name: build
+name: Build
 
 on:
   push:
     branches:
       - main
-      - workflow/add-build-img-action
   pull_request:
     branches:
       - main
-      - workflow/add-build-img-action
 
 concurrency:
   group: ${{ github.workflow }}-${{ github.ref }}
@@ -55,12 +53,6 @@ jobs:
           key: ${{ runner.os }}-buildx-${{ github.sha }}
           restore-keys: |
             ${{ runner.os }}-buildx-
-      - name: Login to DockerHub
-        uses: docker/login-action@v1
-        with:
-          username: ${{ secrets.DOCKERHUB_USERNAME }}
-          password: ${{ secrets.DOCKERHUB_PASSWORD }}
-        if: ${{ github.event_name != 'pull_request' && github.event.action != 'unassigned' }}
 
       - name: Build and push amd64
         uses: docker/build-push-action@v2.5.0
@@ -68,7 +60,7 @@ jobs:
           context: .
           file: ./Dockerfile
           platforms: linux/amd64
-          push: true
+          push: false
           tags: thebeatles1994/open-local:latest
       - name: Build and push arm64
         uses: docker/build-push-action@v2.5.0
@@ -76,5 +68,5 @@ jobs:
           context: .
           file: ./Dockerfile
           platforms: linux/arm64
-          push: true
+          push: false
           tags: thebeatles1994/open-local:latest-arm64
