--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -53,20 +53,18 @@ jobs:
           key: ${{ runner.os }}-buildx-${{ github.sha }}
           restore-keys: |
             ${{ runner.os }}-buildx-
-
-      - name: Build and push amd64
+      - name: Docker meta
+        id: meta
+        uses: docker/metadata-action@v3
+        with:
+          images: thebeatles1994/open-local
+          tags: |
+            type=ref,event=tag
+      - name: Build image
         uses: docker/build-push-action@v2.5.0
         with:
           context: .
           file: ./Dockerfile
           platforms: linux/amd64
           push: false
-          tags: thebeatles1994/open-local:latest
-      - name: Build and push arm64
-        uses: docker/build-push-action@v2.5.0
-        with:
-          context: .
-          file: ./Dockerfile
-          platforms: linux/arm64
-          push: false
-          tags: thebeatles1994/open-local:latest-arm64
+          tags: ${{ steps.meta.outputs.tags }}
