--- a/helm/templates/csi-resizer.yaml
+++ b/helm/templates/csi-resizer.yaml
@@ -22,7 +22,7 @@ spec:
       - operator: Exists
         effect: NoSchedule
         key: node-role.kubernetes.io/master
-      priorityClassName: system-node-critical
+      priorityClassName: system-cluster-critical
       serviceAccount: {{ .Values.name }}
       hostNetwork: true
       dnsPolicy: ClusterFirstWithHostNet
@@ -41,6 +41,13 @@ spec:
           volumeMounts:
             - name: socket-dir
               mountPath: /var/lib/kubelet/plugins/{{ .Values.driver }}
+          resources:
+            limits:
+              cpu: 500m
+              memory: 512Mi
+            requests:
+              cpu: 50m
+              memory: 128Mi
       volumes:
         - name: socket-dir
           hostPath:
