--- a/helm/templates/scheduler-extender.yaml
+++ b/helm/templates/scheduler-extender.yaml
@@ -19,6 +19,7 @@ spec:
     spec:
       hostNetwork: true
       dnsPolicy: ClusterFirstWithHostNet
+      priorityClassName: system-cluster-critical
       tolerations:
       - operator: Exists
         effect: NoSchedule
@@ -50,10 +51,10 @@ spec:
         resources:
           limits:
             cpu: 500m
-            memory: 500Mi
+            memory: 512Mi
           requests:
             cpu: 100m
-            memory: 100Mi
+            memory: 128Mi
         env:
         - name: TZ
           value: Asia/Shanghai
