--- a/helm/templates/snapshot-controller.yaml
+++ b/helm/templates/snapshot-controller.yaml
@@ -21,7 +21,7 @@ spec:
       - operator: Exists
         effect: NoSchedule
         key: node-role.kubernetes.io/master
-      priorityClassName: system-node-critical
+      priorityClassName: system-cluster-critical
       serviceAccount: {{ .Values.name }}
       hostNetwork: true
       dnsPolicy: ClusterFirstWithHostNet
@@ -37,7 +37,7 @@ spec:
           resources:
             limits:
               cpu: 500m
-              memory: 500Mi
+              memory: 512Mi
             requests:
-              cpu: 100m
-              memory: 100Mi
+              cpu: 50m
+              memory: 128Mi
