--- a/helm/templates/csi-provisioner.yaml
+++ b/helm/templates/csi-provisioner.yaml
@@ -22,7 +22,7 @@ spec:
       - operator: Exists
         effect: NoSchedule
         key: node-role.kubernetes.io/master
-      priorityClassName: system-node-critical
+      priorityClassName: system-cluster-critical
       serviceAccount: {{ .Values.name }}
       hostNetwork: true
       dnsPolicy: ClusterFirstWithHostNet
@@ -35,6 +35,7 @@ spec:
             - --feature-gates=Topology=True
             - --strict-topology=True
             - --extra-create-metadata=true
+            - --timeout=10m
             - --v=5
           env:
             - name: ADDRESS
@@ -45,10 +46,10 @@ spec:
           resources:
             limits:
               cpu: 500m
-              memory: 500Mi
+              memory: 512Mi
             requests:
-              cpu: 100m
-              memory: 100Mi
+              cpu: 50m
+              memory: 128Mi
           volumeMounts:
             - name: socket-dir
               mountPath: /var/lib/kubelet/plugins/{{ .Values.driver }}
