--- a/helm/templates/storage-class.yaml
+++ b/helm/templates/storage-class.yaml
@@ -24,6 +24,19 @@ allowVolumeExpansion: true
 apiVersion: storage.k8s.io/v1
 kind: StorageClass
 metadata:
+  name: {{ .Values.storageclass.lvm_io.name }}
+provisioner: {{ .Values.driver }}
+parameters:
+  volumeType: "LVM"
+  bps: "1048576"
+  iops: "1024"
+reclaimPolicy: Delete
+volumeBindingMode: WaitForFirstConsumer
+allowVolumeExpansion: true
+---
+apiVersion: storage.k8s.io/v1
+kind: StorageClass
+metadata:
   name: {{ .Values.storageclass.device_hdd.name }}
 provisioner: {{ .Values.driver }}
 parameters:
