update image in example

--- a/example/device/sts-block.yaml
+++ b/example/device/sts-block.yaml
@@ -46,7 +46,7 @@ spec:
       containers:
       - name: nginx
         image: nginx
-        imagePullPolicy: IfNotPresent
+        imagePullPolicy: Always
         volumeDevices:
         - devicePath: "/dev/sdd"
           name: html
