--- a/helm/templates/csi-snapshotter.yaml
+++ b/helm/templates/csi-snapshotter.yaml
@@ -39,7 +39,7 @@ spec:
               value: /var/lib/kubelet/plugins/{{ .Values.driver }}/csi.sock
             - name: TZ
               value: Asia/Shanghai
-          imagePullPolicy: IfNotPresent
+          imagePullPolicy: Always
           resources:
             limits:
               cpu: 500m
