--- a/helm/templates/snapshot-controller.yaml
+++ b/helm/templates/snapshot-controller.yaml
@@ -33,7 +33,7 @@ spec:
           env:
             - name: TZ
               value: Asia/Shanghai
-          imagePullPolicy: IfNotPresent
+          imagePullPolicy: Always
           resources:
             limits:
               cpu: 500m
