--- a/example/device/sts-fs.yaml
+++ b/example/device/sts-fs.yaml
@@ -46,7 +46,7 @@ spec:
       containers:
       - name: nginx
         image: nginx
-        imagePullPolicy: IfNotPresent
+        imagePullPolicy: Always
         volumeMounts:
         - mountPath: "/data"
           name: html
