--- a/example/lvm/sts-nginx-snap.yaml
+++ b/example/lvm/sts-nginx-snap.yaml
@@ -49,7 +49,7 @@ spec:
       containers:
       - name: nginx
         image: nginx
-        imagePullPolicy: IfNotPresent
+        imagePullPolicy: Always
         volumeMounts:
         - mountPath: "/data"
           name: html
