--- a/example/mountpoint/sts-nginx.yaml
+++ b/example/mountpoint/sts-nginx.yaml
@@ -45,7 +45,7 @@ spec:
       containers:
       - name: nginx
         image: nginx
-        imagePullPolicy: IfNotPresent
+        imagePullPolicy: Always
         volumeMounts:
         - mountPath: "/data"
           name: html
