--- a/helm/values.yaml
+++ b/helm/values.yaml
@@ -4,7 +4,7 @@ driver: local.csi.aliyun.com
 images:
   local:
     image: thebeatles1994/open-local
-    tag: v0.3.2
+    tag: v0.3.3-dev
   registrar:
     image: thebeatles1994/csi-node-driver-registrar
     tag: v2.3.0
