--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -31,21 +31,22 @@ jobs:
         id: meta-amd64
         uses: docker/metadata-action@v3
         with:
-          images: thebeatles1994/open-local
+          images: ack-agility-registry.cn-shanghai.cr.aliyuncs.com/ecp_builder/open-local
           tags: |
             type=ref,event=tag
       - name: Docker arm64 meta
         id: meta-arm64
         uses: docker/metadata-action@v3
         with:
-          images: thebeatles1994/open-local
+          images: ack-agility-registry.cn-shanghai.cr.aliyuncs.com/ecp_builder/open-local
           tags: |
             type=ref,event=tag,suffix=-arm64
       - name: Login to DockerHub
         uses: docker/login-action@v1
         with:
-          username: ${{ secrets.DOCKERHUB_USERNAME }}
-          password: ${{ secrets.DOCKERHUB_PASSWORD }}
+          registry: ack-agility-registry.cn-shanghai.cr.aliyuncs.com
+          username: ${{ secrets.ACR_USERNAME }}
+          password: ${{ secrets.ACR_PASSWORD }}
 
       - name: Build and push amd64
         uses: docker/build-push-action@v2.5.0
