Add value to optionally turn off init-job

--- a/helm/values.yaml
+++ b/helm/values.yaml
@@ -47,3 +47,5 @@ storageclass:
     name: open-local-mountpoint-ssd
   mountpoint_hdd:
     name: open-local-mountpoint-hdd
+initjob:
+  enabled: true
