--- a/helm/templates/init-job.yaml
+++ b/helm/templates/init-job.yaml
@@ -1,3 +1,4 @@
+{{- if .Values.initjob.enabled -}}
 kind: Job
 apiVersion: batch/v1
 metadata:
@@ -92,3 +93,4 @@ spec:
           hostPath:
             path: /etc/kubernetes/
             type: DirectoryOrCreate
+{{- end }}
