--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -31,23 +31,41 @@ jobs:
         id: meta-amd64
         uses: docker/metadata-action@v3
         with:
-          images: ack-agility-registry.cn-shanghai.cr.aliyuncs.com/ecp_builder/open-local
+          images: thebeatles1994/open-local
           tags: |
             type=ref,event=tag
       - name: Docker arm64 meta
         id: meta-arm64
         uses: docker/metadata-action@v3
         with:
+          images: thebeatles1994/open-local
+          tags: |
+            type=ref,event=tag,suffix=-arm64
+      - name: Docker amd64 meta
+        id: meta-acr-amd64
+        uses: docker/metadata-action@v3
+        with:
+          images: ack-agility-registry.cn-shanghai.cr.aliyuncs.com/ecp_builder/open-local
+          tags: |
+            type=ref,event=tag
+      - name: Docker arm64 meta
+        id: meta-acr-arm64
+        uses: docker/metadata-action@v3
+        with:
           images: ack-agility-registry.cn-shanghai.cr.aliyuncs.com/ecp_builder/open-local
           tags: |
             type=ref,event=tag,suffix=-arm64
-      - name: Login to DockerHub
+      - name: Login to ACR
         uses: docker/login-action@v1
         with:
           registry: ack-agility-registry.cn-shanghai.cr.aliyuncs.com
           username: ${{ secrets.ACR_USERNAME }}
           password: ${{ secrets.ACR_PASSWORD }}
-
+      - name: Login to DockerHub
+        uses: docker/login-action@v1
+        with:
+          username: ${{ secrets.DOCKERHUB_USERNAME }}
+          password: ${{ secrets.DOCKERHUB_PASSWORD }}
       - name: Build and push amd64
         uses: docker/build-push-action@v2.5.0
         with:
@@ -55,18 +73,20 @@ jobs:
           file: ./Dockerfile
           platforms: linux/amd64
           push: ${{ github.event_name != 'pull_request' }}
-          tags: ${{ steps.meta-amd64.outputs.tags }}
-          labels: ${{ steps.meta-amd64.outputs.labels }}
           cache-from: type=local,src=/tmp/.buildx-cache
           cache-to: type=local,dest=/tmp/.buildx-cache
+          tags: |
+            ${{ steps.meta-amd64.outputs.tags }}
+            ${{ steps.meta-acr-amd64.outputs.tags }}
       - name: Build and push arm64
         uses: docker/build-push-action@v2.5.0
         with:
           context: .
-          file: ./Dockerfile
+          file: ./Dockerfile.arm64
           platforms: linux/arm64
           push: ${{ github.event_name != 'pull_request' }}
-          tags: ${{ steps.meta-arm64.outputs.tags }}-arm64
-          labels: ${{ steps.meta-arm64.outputs.labels }}
           cache-from: type=local,src=/tmp/.buildx-cache
           cache-to: type=local,dest=/tmp/.buildx-cache
+          tags: |
+            ${{ steps.meta-arm64.outputs.tags }}
+            ${{ steps.meta-acr-arm64.outputs.tags }}
